# latex_template

./: .gitignore  Makefile  main.tex  pyproject.toml
bib/: references.bib
figures/data/: readme.md
figures/notebooks/: figure_exploration.ipynb
figures/raw/: readme.md
figures/scripts/: fig1.py  utils.py
figures/tikz/: fig1.tikz
journal/: readme.md
journal/agujournal2025/: agujournal2025.cls  agujournaltemplate.tex  tweaklist-git-moderncv-fixed.sty  wiley-macros.tex
journal/oxbeamer/: oxbeamer.sty
journal/seismica_submission_latex/: abbrvnat_seismica_upcasetitle.bst  mybibfile.bib  seismica.cls  seismica_template.tex
preamble/: macros.tex  preamble.tex
preamble/styles/: readme.md
sections/: 01_intro.tex  07_data_availability.tex
